Bug 401685 - context menu option for mailing list actions confused about which list is relevant
Summary: context menu option for mailing list actions confused about which list is rel...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-03 08:49 UTC by Sander van Grieken
Modified: 2018-12-04 06:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander van Grieken 2018-12-03 08:49:51 UTC
SUMMARY

I have an email in my Inbox (so non-mailing list folder), that enables Mailing List options in the context menu in the message view pane. The email only has a List-Unsubscribe header (No List-Id header). The context menu options however show actions for the previously visited mailing list folder.

STEPS TO REPRODUCE
1. Click on an email in a mailing list folder (let's call it List X)
2. Right-click mail content page
3. observe Mailing List options for List X
4. Click mail in non Mailing List folder, but containing a List-Unsubscribe header
5. Right-click mail content page
6. observe Mailing List context menu label incorrectly refers to List X

OBSERVED RESULT

Context menu label refers to Mailing List X. However, the context menu correctly only contains an option for unsubscribing.

EXPECTED RESULT

Context menu label for Mailing List options should not use the label for unrelated List X. 


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2018-12-04 06:20:21 UTC
I confirm it.
Comment 2 Laurent Montel 2018-12-04 06:43:04 UTC
Git commit e6c05ce0c7f18ab44a86124e4a8f1ca56750fdac by Laurent Montel.
Committed on 04/12/2018 at 06:42.
Pushed by mlaurent into branch 'Applications/18.12'.

Fix Bug 401685 - context menu option for mailing list actions confused about which list is relevant

FIXED-IN: 5.10.0

M  +1    -3    src/messageactions.cpp

https://commits.kde.org/kmail/e6c05ce0c7f18ab44a86124e4a8f1ca56750fdac