Fix Bug 401685 - context menu option for mailing list actions confused about which list is relevant

FIXED-IN: 5.10.0
BUG: 401685